--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -10,10 +10,9 @@ jobs:
     echo-goodbye:
         runs-on: ubuntu-latest
         steps:
-            - name: Failed Step
+            - name: Successful Step
               run: |
-                echo "This step will fail"
-                exit 1
+                echo "I will succeed"
             - name: say Goodbye
               run: echo "Goodbye, World!"
             
