--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -1,5 +1,10 @@
 name: 02-Workflow Events
-on: push
+on: 
+    push:
+    pull_request:
+    schedule:
+        - cron: '0 0 * * *'  # Every day at midnight UTC
+    workflow_dispatch:
 
 jobs:
     echo:
