--- a/.github/workflows/03-workflow-events.yaml
+++ b/.github/workflows/03-workflow-events.yaml
@@ -10,7 +10,12 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
-            - name: Print folders
+            - name: Set up Python
+              uses: actions/setup-python@v4
+              with:
+                python-version: '3.12'
+            - name: Install dependencies
               run: |
-                echo "Folders in the repository:"
-                ls -d */
+                python -m pip install -r requirements.txt
+            - name: Run tests
+              run: pytest --maxfail=1 --disable-warnings -q
