--- a/.github/workflows/03-workflow-events.yaml
+++ b/.github/workflows/03-workflow-events.yaml
@@ -10,12 +10,23 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
+
             - name: Set up Python
               uses: actions/setup-python@v4
               with:
                 python-version: '3.12'
+
             - name: Install dependencies
               run: |
                 python -m pip install -r requirements.txt
+
+            - name: Generate Django Secret Key
+              run: |
+                    DJANGO_SECRET_KEY=$(python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())")
+                    echo "DJANGO_SECRET_KEY=$DJANGO_SECRET_KEY" >> $GITHUB_ENV
+                    
+            - name: Run migrations
+              run: python manage.py migrate --noinput
+
             - name: Run tests
               run: pytest --maxfail=1 --disable-warnings -q
