--- a/.github/workflows/04-workflow-events-get-secret.yaml
+++ b/.github/workflows/04-workflow-events-get-secret.yaml
@@ -1,6 +1,8 @@
 name: python-django-cyph3r-build
 on:
-    workflow_dispatch:
+    pull_request:
+        branches:
+            - main
 
 jobs:
     build:
@@ -16,7 +18,7 @@ jobs:
 
             - name: Install dependencies
               run: |
-                python -m pip install -r requirements.txt
+                python -m pip install django
 
             - name: Generate Django Secret Key
               run: |
@@ -25,9 +27,3 @@ jobs:
             
             - name: Print environment variables
               run: printenv
-
-            - name: Run migrations
-              run: python manage.py migrate --noinput
-
-            - name: Run tests
-              run: pytest --maxfail=1 --disable-warnings -q
