update cyph3r workflow - add test-05

--- a/.github/workflows/03-workflow-events-run-tests.yaml
+++ b/.github/workflows/03-workflow-events-run-tests.yaml
@@ -1,6 +1,8 @@
 name: python-django-cyph3r-build
 on:
-    workflow_dispatch:
+    pull_request:
+        branches:
+            - main
 
 jobs:
     build:
