--- a/.github/workflows/04-workflow-events-get-secret.yaml
+++ b/.github/workflows/04-workflow-events-get-secret.yaml
@@ -1,8 +1,6 @@
 name: python-django-cyph3r-build
 on:
-    pull_request:
-        branches:
-            - main
+    workflow_dispatch:
 
 jobs:
     build:
