update cyph3r workflow - add test-06

--- a/.github/workflows/03-workflow-events-run-tests.yaml
+++ b/.github/workflows/03-workflow-events-run-tests.yaml
@@ -30,6 +30,9 @@ jobs:
 
             - name: Run migrations
               run: python manage.py migrate --noinput
+            
+            - name: Create Media Folder
+              run: mkdir -p media
 
             - name: Run tests
               run: pytest --maxfail=1 --disable-warnings -q
