update cyph3r workflow - add test-07

--- a/.github/workflows/03-workflow-events-run-tests.yaml
+++ b/.github/workflows/03-workflow-events-run-tests.yaml
@@ -15,8 +15,14 @@ jobs:
               uses: actions/setup-python@v4
               with:
                 python-version: '3.12'
-
-            - name: Install dependencies
+            
+            - name: Install app OS dependencies
+              run: sudo apt-get update && sudo apt-get install -y redis-server gnupg libmagic1
+            
+            - name: Start Redis
+              run: sudo systemctl start redis-server
+            
+            - name: Install app python dependencies
               run: |
                 python -m pip install -r requirements.txt
 
