--- a/.github/workflows/03-workflow-events-run-tests.yaml
+++ b/.github/workflows/03-workflow-events-run-tests.yaml
@@ -6,7 +6,12 @@ on:
 
 jobs:
     build:
-        runs-on: ubuntu-latest        
+        runs-on: ubuntu-latest   
+        services:
+          redis:
+            image: redis:alpine
+            ports:
+              - 6379:6379
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
@@ -17,22 +22,17 @@ jobs:
                 python-version: '3.12'
             
             - name: Install app OS dependencies
-              run: sudo apt-get update && sudo apt-get install -y redis-server gnupg libmagic1
-            
-            - name: Start Redis
-              run: sudo systemctl start redis-server
+              run: sudo apt-get update && sudo apt-get install -y gnupg libmagic1
             
             - name: Install app python dependencies
               run: |
-                python -m pip install -r requirements.txt
+                python -m pip install --no-cache-dir -r requirements.txt
 
             - name: Generate Django Secret Key
               run: |
                     DJANGO_DEV_SECRET_KEY=$(python3 -c 'import django.utils.crypto; print(django.utils.crypto.get_random_string(50, "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^&*()-="))')
                     echo "DJANGO_DEV_SECRET_KEY=$DJANGO_DEV_SECRET_KEY" >> $GITHUB_ENV
             
-            - name: Print environment variables
-              run: printenv
 
             - name: Run migrations
               run: python manage.py migrate --noinput
